card 87 - fix truncate issue on admin feedback page

--- a/app/assets/stylesheets/day_feedbacks.css.scss
+++ b/app/assets/stylesheets/day_feedbacks.css.scss
@@ -133,7 +133,7 @@
 }
 
 .day-feedback-date {
-  width: 191px;
+  width: 140px;
 }
 
 .admin-feedback-date-select {
