--- a/app/assets/stylesheets/feedbacks.css.scss
+++ b/app/assets/stylesheets/feedbacks.css.scss
@@ -42,3 +42,6 @@ th .desc {
 .admin-curriculum-feedback-date-column, .admin-curriculum-feedback-student-column {
   width: 145px;
 }
+.admin-teacher-feedback-date-column {
+  width: 140px;
+}
